src/styles/global.css
@font-face {
  font-family: "GeistBold";
  src:
    url("/fonts/geist/geist-bold-webfont.woff2") format("woff2"),
    url("/fonts/geist/geist-bold-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "GeistMedium";
  src:
    url("/fonts/geist/geist-medium-webfont.woff2") format("woff2"),
    url("/fonts/geist/geist-medium-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "GeistRegular";
  src:
    url("/fonts/geist/geist-regular-webfont.woff2") format("woff2"),
    url("/fonts/geist/geist-regular-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "GeistSemiBold";
  src:
    url("/fonts/geist/geist-semibold-webfont.woff2") format("woff2"),
    url("/fonts/geist/geist-semibold-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

/* color for icon switch based on the display size */
@media (min-width: 640px) {
  :root {
    --icon-color: gray; /* Default color for larger screens */
  }
}

@media (max-width: 639px) {
  :root {
    --icon-color: white; /* Color for small screens */
  }
}

.text-green-gradient {
  background: var(--Gradient-100, linear-gradient(90deg, #00dd75 -28.74%, #60efff 129.89%));
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
body {
  overflow-x: hidden;
}

#custom-width a {
  display: block;
  width: 100%;
}

